--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.application.name=conexionapirest
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/pija
+spring.datasource.url=jdbc:postgresql://localhost:5432/college
 spring.datasource.username=postgres
 spring.datasource.password=tomas2004
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
